--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section id="rs">
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="estilos/home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt=""></a> <br>
 
             <a href="#" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a> <br>
 
