--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
             <a href="estilos/home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="github.HTML" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="ing.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="twt.html" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a> <br>
 
-            <a href="#" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a> <br>
+            <a href="fb.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a> <br>
 
 
 
